--- a/week01/week 1 assignment.ipynb
+++ b/week01/week 1 assignment.ipynb
@@ -13,7 +13,12 @@
    "id": "d950b01e-740d-4065-8032-f965bdb1b0a9",
    "metadata": {},
    "source": [
-    "Importing geopandas library"
+    "## Data Exploration\n",
+    "\n",
+    "### Data\n",
+    "For this week's assignment, I use GIS data on LA Metro's Bus Rapid Lines. \n",
+    "\n",
+    "This is a geospatial dataframe and hence requires the geopandas library for any manipulation. "
    ]
   },
   {
@@ -40,7 +45,9 @@
    "id": "42adfb06-81cd-4058-8001-232e7fdecc3c",
    "metadata": {},
    "source": [
-    "Importing the rapid bus lines data from LA Metro GIS database. Note that I read the data directly from the website. It was displaying errors when the file was manually uploaded. "
+    "## Importing the data \n",
+    "\n",
+    "Importing the rapid bus lines data from LA Metro GIS data. Note that I read the data directly from the website. It was displaying errors when the file was manually uploaded. "
    ]
   },
   {
@@ -58,7 +65,7 @@
    "id": "03ff65a8-ce89-479c-af5e-7b6f7c3a2237",
    "metadata": {},
    "source": [
-    "exploring the datatype of the imported file"
+    "Checking the datatype of the dataframe"
    ]
   },
   {
@@ -87,7 +94,8 @@
    "id": "36cf11b8-c6c1-41fa-ae9e-b12878093399",
    "metadata": {},
    "source": [
-    "Exploring the number of rows and columns in the file. "
+    "## Exploring data\n",
+    "Exploring the number of rows and columns in the dataframe. "
    ]
   },
   {
@@ -116,7 +124,7 @@
    "id": "015e70a8-7755-40dd-b3fe-0506bf4fcadd",
    "metadata": {},
    "source": [
-    "Exploring basic information about the file - header names and number of rows. "
+    "Exploring basic information about the dataframe. We get a summary of the data in the dataframe, along with information on headers/columns and number of rows. "
    ]
   },
   {
@@ -171,7 +179,7 @@
    "id": "54f20626-94c6-4200-817a-b1b950d4b9c2",
    "metadata": {},
    "source": [
-    "Generating list of first five rows in the file"
+    "Generating list of first five rows in the dataframe."
    ]
   },
   {
@@ -283,7 +291,9 @@
    "id": "be6d7be5-9875-4a0c-8370-f24478851c18",
    "metadata": {},
    "source": [
-    "Plotting the rows in the file"
+    "## Plotting Data\n",
+    "\n",
+    "Since this is a geospatial dataframe, we can plot the rows to generate a graph of the points. "
    ]
   },
   {
@@ -324,7 +334,7 @@
    "id": "454ee4d6-2671-475f-9e4b-f6a22e5d1f91",
    "metadata": {},
    "source": [
-    "Generating a random sample of three rows"
+    "Generating a random sample of three rows from within the dataframe"
    ]
   },
   {
@@ -363,43 +373,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
+       "      <th>32</th>\n",
        "      <td>734</td>\n",
-       "      <td>N2</td>\n",
+       "      <td>N1</td>\n",
        "      <td>0</td>\n",
-       "      <td>DETOUR</td>\n",
-       "      <td>LINESTRING (-118.43538 34.03731, -118.43583 34...</td>\n",
+       "      <td>END TO END</td>\n",
+       "      <td>LINESTRING (-118.43460 34.03512, -118.43536 34...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>740</td>\n",
-       "      <td>N2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HAWSTO</td>\n",
-       "      <td>LINESTRING (-118.35259 33.93229, -118.35259 33...</td>\n",
+       "      <th>75</th>\n",
+       "      <td>780</td>\n",
+       "      <td>W1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>END TO END</td>\n",
+       "      <td>LINESTRING (-118.12002 34.14598, -118.11985 34...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>901</td>\n",
-       "      <td>E2</td>\n",
+       "      <th>2</th>\n",
+       "      <td>704</td>\n",
+       "      <td>E6</td>\n",
        "      <td>2</td>\n",
-       "      <td>CANOGA STATION LAYOVER</td>\n",
-       "      <td>LINESTRING (-118.59682 34.19051, -118.59747 34...</td>\n",
+       "      <td>TRIPS START SEPSAN</td>\n",
+       "      <td>LINESTRING (-118.44356 34.04791, -118.44354 34...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   VAR_ROUTE VAR_IDENT  VAR_DIREC               VAR_DESCR  \\\n",
-       "33       734        N2          0                  DETOUR   \n",
-       "37       740        N2          0                  HAWSTO   \n",
-       "80       901        E2          2  CANOGA STATION LAYOVER   \n",
+       "   VAR_ROUTE VAR_IDENT  VAR_DIREC           VAR_DESCR  \\\n",
+       "32       734        N1          0          END TO END   \n",
+       "75       780        W1          3          END TO END   \n",
+       "2        704        E6          2  TRIPS START SEPSAN   \n",
        "\n",
        "                                             geometry  \n",
-       "33  LINESTRING (-118.43538 34.03731, -118.43583 34...  \n",
-       "37  LINESTRING (-118.35259 33.93229, -118.35259 33...  \n",
-       "80  LINESTRING (-118.59682 34.19051, -118.59747 34...  "
+       "32  LINESTRING (-118.43460 34.03512, -118.43536 34...  \n",
+       "75  LINESTRING (-118.12002 34.14598, -118.11985 34...  \n",
+       "2   LINESTRING (-118.44356 34.04791, -118.44354 34...  "
       ]
      },
      "execution_count": 8,
@@ -416,7 +426,10 @@
    "id": "f8aef929-2512-4415-8c89-58e9feff0c34",
    "metadata": {},
    "source": [
-    "Generating list of column headers in the file"
+    "## Filtering the data\n",
+    "\n",
+    "\n",
+    "First, we generate a list of column headers in the dataframe. "
    ]
   },
   {
@@ -445,7 +458,7 @@
    "id": "f2ffcddc-8eab-4a3b-b717-f4738cedacc6",
    "metadata": {},
    "source": [
-    "Counting unique items in first column names VAR_ROUTE"
+    "Now that we know the column names, we can identify number of unique rows for a particular column. "
    ]
   },
   {
@@ -495,7 +508,7 @@
    "id": "c98a9c70-17e0-4f0a-96e3-c9f21a32bc57",
    "metadata": {},
    "source": [
-    "Filtering the file to display all records with VAR_ROUTE 720"
+    "From this, we pick a particular route to filter the dataframe. We will filter for route 720.  "
    ]
   },
   {
@@ -672,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "1de54af5-925e-4f5e-ae3c-ea0081799e9a",
    "metadata": {},
    "outputs": [
@@ -682,7 +695,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8772d9ef-e665-4534-b9c8-01d9fa140fd8",
    "metadata": {},
    "outputs": [
@@ -711,7 +724,7 @@
        "<AxesSubplot:title={'center':'Variations for the line'}>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -743,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "69b43a8f-3477-40af-be3e-fc03a28c32be",
    "metadata": {},
    "outputs": [
@@ -753,7 +766,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -773,22 +786,6 @@
    "source": [
     "rapid_lines.plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c2bfa4f-35ae-4b44-8136-496bd4e4fd02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42c5cb9a-b3c0-4616-867c-662d2f238792",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
